--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Spoutpay</string>
+    <string name="app_name">SpoutPay</string>
     <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true" translatable="false">DO_NOT_ASK_JAVASCRIPT</string>
 <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true" translatable="false">ALWAYS_SEND</string>
      <string moduleConfig="true" name="CodePushDeploymentKey">iAJG_u5GGek_NdQbaGdo4BFVx34BG0TWuDiFX</string>
